--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "serve": "node ./server/main.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
